--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vuelidate/validators": "^2.0.4",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.17",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
